@@ -2,6 +2,6 @@ AUX libwiimote-amd64.patch 397 RMD160 b51df3594b6f2c2e1d3772abb1cf663db1d5243d S
 AUX libwiimote-as-needed.patch 496 RMD160 24d5c589b6c15cfcc0701279c7af67f9921c0b3f SHA1 c45b90c9831b5f94f0726d37f47f3f23578c88df SHA256 550e482c40662970777eada373c79cecc169916af6dd3a42d22a2f84f5e92a44
 DIST libwiimote-0.4.tgz 30857 RMD160 4fefc82cd577404a9aefda2d40144cb2c6d9c6c8 SHA1 79b1639d481b35eb6df7b83877f9438944ec389c SHA256 a1e9d45a0d4dd367f1371dd477e30ecaa95e59b9fb8635dc9e7f26e4eb231d90
 EBUILD libwiimote-0.4.ebuild 866 RMD160 3bc240d785299eeac0ee3ee04a371ca356f494bf SHA1 694a6efa6fe6b19b252e93d9cc6cb3f9cf151c28 SHA256 139f6d1f7ec23dc3388b8cba4adf0625a2b0ca7b3eada0d9e8163ceae5759fe3
-EBUILD libwiimote-9999.ebuild 1097 RMD160 89bce7a21cbae87677bfb533e6809c22eaf19170 SHA1 5c7150291a70cb81973c687313c99baff0834050 SHA256 6381f1647efecc5e9a9ee6ebea04ce21bbfaaaca674b740de7a9fa0ab9eda815
-MISC ChangeLog 392 RMD160 64914cd3c25a141f6662c0039f1ee91771eaed7d SHA1 4f04a4c7675b8b389fded5002ba2edcd004ca233 SHA256 217e2e59bcfd541be768ad89cbb0a3691e594db846c6b38bcb7191bd7ab05745
+EBUILD libwiimote-9999.ebuild 1074 RMD160 15dc69d1e9277cfef8054cd2a5a48736fab1cfa8 SHA1 4404e1f1dbcbcb902639f69d3e3c2a5e5cee6ff9 SHA256 bc28a991e7740445c987c8b94cfa780c6d2f1181822284e0423cc92a944bcb05
+MISC ChangeLog 513 RMD160 257224d6aca0e1451911f3c073ae18fdc193c474 SHA1 b679abd8272e64d84616d385e9216e69477aafac SHA256 6e42e602d61920af70b64acee079a80900b09564858dff8a2b86c1f3b5bbacda
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
