@@ -3,8 +3,10 @@
 # $Header: $
 
 inherit eutils subversion autotools flag-o-matic
+
 ESVN_REPO_URI="https://libwiimote.svn.sourceforge.net/svnroot/libwiimote/branches/ant"
 ESVN_PROJECT="libwiimote"
+ESVN_BOOTSTRAP="eautoreconf"
 
 DESCRIPTION="Library to connect to the Nintendo Wii remote (svn snapshot)"
 HOMEPAGE="http://libwiimote.sourceforge.net"
@@ -17,11 +19,8 @@ IUSE="examples tilt force"
 RDEPEND="net-wireless/bluez-libs"
 DEPEND="${RDEPEND}"
 
+
 src_compile() {
-
-	cd "${S}"
-	eautoreconf || die "eautoreconf failed"
-
 	econf \
 		$(use_enable force force) \
 		$(use_enable tilt tilt) \
