@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 Feb 2008; Christoph Brill (egore) egore@gmx.de libwiimote-9999.ebuild:
+  Move eautoreconf out as bootstrap command
+
   16 Feb 2008; Christoph Brill (egore) egore@gmx.de
   +files/libwiimote-amd64.patch, +files/libwiimote-as-needed.patch,
   +metadata.xml, +libwiimote-0.4.ebuild, +libwiimote-9999.ebuild:
